@@ -18,6 +18,7 @@ v8.0.32
 - BUG#34695103: Remove debug messages that shows authentication data
 - BUG#34689812: Fix datetime conversion when using prepared cursors
 - BUG#34675508: Character set 'utf8' unsupported in python mysql connector when using MariaDB
+- BUG#34655520: Wrong MySQLCursor.statement values in the results of cursor.execute(..., multi=True)
 - BUG#34556157: Kerberos authorization fails when using SSPI as security interface
 - BUG#34499578: MySQLCursor.executemany() fails to correctly identify BULK data loading ops
 - BUG#34467201: Add init_command connection option
